Add (failing) test for send message timeouts